Fixed RSS icon/name spacing

--- a/css/islandora-person.css
+++ b/css/islandora-person.css
@@ -81,3 +81,7 @@ body.islandora-entity #content, body.islandora-entity #content {
 .islandora-object-content ul {
 	padding: 0 0 0.25em 2em !important;
 }
+
+.islandora-entities-rss-format-name {
+	margin-left: 0.675em;
+}
